kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tst-lb-service
  namespace: tekton-vdm-tst-demo
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    run: tekton-triggers-built-me
spec:
  type: LoadBalancer
  ports:
    - name: nginx-custom
      port: 8080
      protocol: TCP
  selector:
    run: tekton-triggers-built-me
